package models;

public class Account {
    public double getBalance() { return 0; }

    public Client getOwner() { return null; }

    public String getID() { return null; }

    public boolean getAllowDebt() { return null; }

    public Collection<Client> getSharedClients() { return null; }

    public Collection<CashFlow> getCashFlows() { return null; }
}