package models;

public class CashFlow {
    public DateTime getDate() { return null; }

    public double getValue() { return 0; }

    public CashFlowRate getRate() { return null; }
}