package models;

public class Client {
    public String getId() {
        return null;
    }

    public String getIdTypeSymbol() {
        return null;
    }

    public String getName() {
        return null;
    }

    public String getBirthday() {
        return null;
    }

    public String getEmail() {
        return null;
    }

    public String getPhoneNumber() {
        return null;
    }

    public String getAddress() {
        return null;
    }
}
